--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,23 @@
 {
+  "version": 3,
   "builds": [
     {
-      "src": "frontend/**",
-      "use": "@vercel/static"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
     {
       "src": "/(.*)",
       "dest": "/frontend/index.html"
